--- a/src/app/test-angular/test-angular.component.html
+++ b/src/app/test-angular/test-angular.component.html
@@ -382,26 +382,17 @@
           <div class="sap clrTit mrT10 mrB10"><a
               onclick="return send_ga_gtag('box_tin_lien_quan_trong_noi_dung_bai', 'chuyen_muc_162_tin_bai_321062_phien_ban_web','eyJjYXRlZ29yeUlkXzI0aCI6IjE2MiIsInBhZ2VDYXRlZ29yeV8yNGgiOiJldmFfa2l0Y2hlbiIsImFydGljbGVJZF8yNGgiOiIzMjEwNjIiLCJkZXZpY2VfMjRoIjoicGMiLCJhY3Rpb25fMjRoIjoiY2xpY2sifQ==', this)"
               class="clrTit bld"
-              href="https://eva.vn/bep-eva/tu-lam-sua-chua-tai-nha-chi-voi-2-nguyen-lieu-c162a321062.html"
+              href=""
               title="Tự làm sữa chua tại nhà chỉ với 2 nguyên liệu">Tự làm sữa chua tại nhà chỉ với 2 nguyên liệu</a>
           </div>
 
           <div class="sap"><span class="clrTit">Những ngày hè nóng nực khiến bạn chẳng muốn ra đường nhưng lại bỗng dưng
               thèm sữa chua. Vậy thì bắt tay vào tự làm sữa chua thôi!</span></div>
-
-          <div class="btnSe"><a
-              onclick="return send_ga_gtag('box_tin_lien_quan_trong_noi_dung_bai', 'chuyen_muc_162_tin_bai_321062_phien_ban_web','eyJjYXRlZ29yeUlkXzI0aCI6IjE2MiIsInBhZ2VDYXRlZ29yeV8yNGgiOiJldmFfa2l0Y2hlbiIsImFydGljbGVJZF8yNGgiOiIzMjEwNjIiLCJkZXZpY2VfMjRoIjoicGMiLCJhY3Rpb25fMjRoIjoiY2xpY2sifQ==', this)"
-              class="clrFeatr bld"
-              href="https://eva.vn/bep-eva/tu-lam-sua-chua-tai-nha-chi-voi-2-nguyen-lieu-c162a321062.html"
-              title="Tự làm sữa chua tại nhà chỉ với 2 nguyên liệu">Bấm xem &gt;&gt;</a></div>
         </div>
       </div>
-      <div class="athr txtrt pdB10 clrF"><span class="bld">Theo Lâm Anh Đào (Khám phá)</span></div>
     </div>
     <section class="" id="ADS_160_15s_container" style="display: none;">
       <div class="banrpstn">
-
-
         <div id="ADS_160_15s" class="">
           <script type="text/javascript">
             window.addEventListener("load", function () {
